--- a/Trino.WPF.ProjetoFinal/Trino.WPF.ProjetoFinal/App.config
+++ b/Trino.WPF.ProjetoFinal/Trino.WPF.ProjetoFinal/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TrinoProjetoFinalDBEntities" connectionString="metadata=res://*/FinalProjectDBModel.csdl|res://*/FinalProjectDBModel.ssdl|res://*/FinalProjectDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=vjmaurinnote\SQLEXPRESS;initial catalog=TrinoProjetoFinalDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TrinoProjetoFinalDBEntities" connectionString="metadata=res://*/FinalProjectDBModel.csdl|res://*/FinalProjectDBModel.ssdl|res://*/FinalProjectDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=danielnote\SQLEXPRESS;initial catalog=FinalProjectDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
